# nix_gazelle_extension

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  Cargo.nix  Cargo.toml  README.md  WORKSPACE  crate-hashes.json  default.nix  defs.bzl  deps.bzl  go.mod  go.sum  repositories.bzl  setup.bzl  shell.nix  treefmt.toml
examples/: BUILD.bazel  README.md  WORKSPACE  default.nix
examples/folks/cool-kid/: default.nix
examples/folks/i-need-a-friend/: default.nix
examples/folks/leave-me-alone/nothing/to/see/here/officer/: default.nix
examples/folks/lone-wolf/: default.nix
examples/folks/the-one-all-know/: default.nix
examples/folks/we/need/to/go/deeper/: default.nix
examples/nix/nixpkgs/: BUILD.bazel  default.nix
examples/nix/readPkgs/: default.nix
examples/nixpkgs/: default.nix
examples/readtree/: BUILD.bazel  BUILD.in  BUILD.out  README.md  WORKSPACE  default.nix  expectedStderr.txt
examples/readtree/folks/cool-kid/: BUILD.out  default.nix
examples/readtree/folks/cowsay/: BUILD.out  default.nix
examples/readtree/folks/i-need-a-friend/: BUILD.out  default.nix
examples/readtree/folks/leave-me-alone/nothing/to/see/here/officer/: BUILD.out  default.nix
examples/readtree/folks/lone-wolf/: BUILD.out  default.nix
examples/readtree/folks/the-one-all-know/: BUILD.out  default.nix
examples/readtree/folks/we/need/to/go/deeper/: BUILD.out  default.nix
examples/readtree/nix/nixpkgs/: BUILD.bazel  BUILD.out  default.nix  nixpkgs.json
examples/readtree/nix/readPkgs/: BUILD.bazel  BUILD.out  default.nix
examples/toys/: default.nix
examples/vanilla/: .bazelignore  BUILD.bazel  BUILD.in  BUILD.out  README.md  WORKSPACE  expectedStderr.txt
examples/vanilla/folks/cowsay/: BUILD.out  default.nix
examples/vanilla/folks/i-need-a-friend/: BUILD.out  default.nix
examples/vanilla/folks/lone-wolf/: BUILD.out  default.nix
examples/vanilla/nix/nixpkgs/: BUILD.bazel
examples/vanilla/patches/: 001-org_golang_x_mod.patch
gazelle_nix/: BUILD.bazel  defs.bzl  deps.bzl  go.mod  go.sum  lang.go  nix_exporter.bzl  repositories.bzl
language/nix/: BUILD.bazel  lang.go  main.go  resolve.go
nix/: BUILD.bazel  defs.bzl  fptrace.nix  nix_gazelle.bash.in  nixpkgs-stable.json  nixpkgs-stable.nix  nixpkgs.json
nix/gazelle/: BUILD.bazel  configure.go  constants.go  fix.go  generate.go  kinds.go  lang.go  nix_configurer.go  nix_resolver.go  package.go  parser.go  resolve.go  update.go
nix/gazelle/nixconfig/: BUILD.bazel  config.go
nix/gazelle/private/logconfig/: BUILD.bazel  config.go
src/: main.rs
tools/: exporter.bzl
