load("@io_bazel_rules_go//go:def.bzl", "go_library")

# BUILD.bazel
# gazelle:exclude examples/nixpkgs
# gazelle:exclude examples/toys
# gazelle:exclude nix
# gazelle:exclude language
# gazelle:nix_repositories nixpkgs=@nixpkgs
load(
    "@bazel_gazelle//:def.bzl",
    "DEFAULT_LANGUAGES",
    "gazelle",
    "gazelle_binary",
)

gazelle(
    name = "gazelle",
    data = ["@scan_nix//:bin/scan-nix"],
    gazelle = "//:gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["@io_tweag_gazelle_nix//language/nix:gazelle_nix"],
)

gazelle(
    name = "gazelle-update",
    command = "update",
    data = ["@scan_nix//:bin/scan-nix"],
    extra_args = [
        "-lang",
        "gazelle_nix",
    ],
    gazelle = "//:gazelle_binary",
)

gazelle(
    name = "gazelle-update-repos",
    command = "update-repos",
    data = ["@scan_nix//:bin/scan-nix"],
    extra_args = [
        "-lang",
        "gazelle_nix",
        "any",
    ],
    gazelle = "//:gazelle_binary",
)

go_library(
    name = "gazelle_nix",
    srcs = ["lang.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
