[package]
name = "nix_gazelle_extension"
version = "0.0.1" # Format: MAJOR.MINOR.0
authors = [
  "Artur Stachecki <artur.stachecki@tweag.io>"
]
license = "Apache-2.0"
edition = "2018"

[dependencies]
lorri = { git = "https://github.com/nix-community/lorri.git", rev="dfbf9b3d22474380ee5e096931dbf25b1c162d10" }
tempfile = "3.1.0"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
