load(
    "@bazel_gazelle//:def.bzl",
    "DEFAULT_LANGUAGES",
    "gazelle_binary",
    "gazelle_generation_test",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + [
        "@io_tweag_gazelle_nix//nix/gazelle",
    ],
)

filegroup(
    name = "simple",
    srcs = glob([
        "vanilla/WORKSPACE",
        "vanilla/**",
    ]),
)

filegroup(
    name = "readtree",
    srcs = glob([
        "readtree/WORKSPACE",
        "readtree/**",
    ]),
)

gazelle_generation_test(
    name = "test-simple-project-structure",
    gazelle_binary = ":gazelle_binary",
    test_data = [":simple"],
)

gazelle_generation_test(
    name = "test-readtree-project-structure",
    gazelle_binary = ":gazelle_binary",
    test_data = [":readtree"],
)
