# BUILD.bazel
# gazelle:exclude nix
# gazelle:exclude 3rdparty
# gazelle:exclude default.nix
# gazelle:nix_repositories nixpkgs=@nixpkgs
# gazelle:nix_prelude default.nix
load(
    "@io_tweag_gazelle_nix//nix:defs.bzl",
    "nix_gazelle",
)

nix_gazelle(
    name = "update-all",
)

# export prelude
exports_files(["default.nix"])
