load("@io_bazel_rules_go//go:def.bzl", "go_binary")

go_binary(
    name = "go_default_binary",
    srcs = [
        "main.go",
    ],
    data = ["@nixscan//:bin/nixscan"],
    importpath = "github.com/tweag/nix_gazelle_extension/language/nix",
    visibility = ["//visibility:public"],
    deps = [
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
