load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "gazelle",
    srcs = [
        "constants.go",
        "fix.go",
        "generate.go",
        "kinds.go",
        "lang.go",
        "nix_configurer.go",
        "nix_resolver.go",
        "parser.go",
        "update.go",
    ],
    data = ["@fptrace//:bin/fptrace"],
    importpath = "github.com/tweag/nix_gazelle_extension/nix/gazelle",
    visibility = ["//visibility:public"],
    deps = [
        "//nix/gazelle/nixconfig",
        "//nix/gazelle/private/logconfig",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//language/go:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
        "@bazel_gazelle//pathtools:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
        "@bazel_gazelle//walk:go_default_library",
        "@com_github_lainio_err2//:go_default_library",
        "@com_github_lainio_err2//try:go_default_library",
        "@com_github_rs_zerolog//:zerolog",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)
