load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "nixconfig",
    srcs = ["config.go"],
    importpath = "github.com/tweag/nix_gazelle_extension/nix/gazelle/nixconfig",
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_gazelle//config:go_default_library",
    ],
)
