load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "logconfig",
    srcs = ["config.go"],
    importpath = "github.com/tweag/nix_gazelle_extension/nix/gazelle/private/logconfig",
    visibility = ["//nix/gazelle:__subpackages__"],
    deps = ["@com_github_rs_zerolog//:zerolog"],
)